--- a/manage-users/homr.html
+++ b/manage-users/homr.html
@@ -30,7 +30,7 @@
         <div class="container">
             <h1>Welcome to My Website</h1>
             <p class="lead">We create beautiful and responsive designs for you.</p>
-            <a href="#about" class="btn btn-light btn-lg">Learn More</a>
+            <a href="#about" class="btn btn-primary btn-lg">Learn More</a>
         </div>
     </section>
 
