dose(udpate text):update document of user[hh-23]

--- a/manage-users/homr.html
+++ b/manage-users/homr.html
@@ -29,6 +29,7 @@
     <section class="hero text-center text-white bg-primary py-5">
         <div class="container">
             <h1>Welcome to My Website</h1>
+            <h1>Welcome to My Website</h1>
             <p class="lead">We create beautiful and responsive designs for you.</p>
             <a href="#about" class="btn btn-primary btn-lg">Learn More</a>
         </div>
